--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,17 @@
 *.zip
 *.tar.gz
 *.rar
-
+*.iml
+*.xml
+*.html
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.gitignore
+/.gitignore/
+*.gitignore
+
+/out/
+*.idea
+*.txt
+*.gitignore
+/.gitignore/
